# snowpark-connect-template-python

./: README.md  main.py  pyproject.toml  scratch.ipynb  snowpark-submit-example.sh
.github/workflows/: ci.yml
src/: main.py  scratch.ipynb
