[project]
name = "snowpark-connect-template-python"
version = "0.1.0"
description = "A reference Python project template for Snowpark Connect for Apache Spark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "pyspark>=4.1.0",
    "snowpark-connect[jdk]>=1.7.0",
    "snowpark-submit>=1.7.0",
]

# This causes a conflict with snowpark-connect, can't be installed in the same Python environment. :(
# https://github.com/sfc-gh-jfreeberg/snowpark-connect-template-python/issues/2
# [project.optional-dependencies]
# cli = [
#     "snowflake-cli>=3.12.0",
# ]